--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-quarkus.mongodb.connection-string=mongodb+srv://tanjagrozdani:dKr5l6msR3fDqOa@userservice.heuutg4.mongodb.net/
-quarkus.mongodb.database=ITA_2
+quarkus.mongodb.connection-string=${MONGO_DB_URI_2}
+quarkus.mongodb.database=${MONGO_DB_DATABASE_2}
