--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-quarkus.mongodb.connection-string=${MONGO_DB_URI_2}
-quarkus.mongodb.database=${MONGO_DB_DATABASE_2}
+quarkus.mongodb.connection-string= ${MONGO_DB_URI_2}
+quarkus.mongodb.database= ${MONGO_DB_DATABASE_2}
+quarkus.mongodb.hosts=*
