--- a/.github/workflows/quarkus.yml
+++ b/.github/workflows/quarkus.yml
@@ -1,4 +1,4 @@
-name: Run Tests2
+name: Run Tests and Publish Docker Image
 
 on:
   push:
@@ -12,6 +12,10 @@ jobs:
     env:
       MONGO_DB_URI_MS: ${{ secrets.MONGO_DB_URI_2 }}
       MONGO_DB_DATABASE_MS: ${{ secrets.MONGO_DB_DATABASE_2 }}
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      IMAGE_NAME: tanjag/user_service-jvm
+      TAG: 1.0.0
 
     steps:
       - name: Checkout repository
@@ -31,3 +35,18 @@ jobs:
 
       - name: Build and test with Maven
         run: mvn -B clean install
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build Docker image
+        run: docker build -f src/main/docker/Dockerfile.jvm -t $IMAGE_NAME:$TAG .
+
+      - name: Push Docker image to DockerHub
+        run: docker push $IMAGE_NAME:$TAG
