transfer to local database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-quarkus.mongodb.connection-string= ${MONGO_DB_URI_2}
-quarkus.mongodb.database= ${MONGO_DB_DATABASE_2}
+#quarkus.mongodb.connection-string= mongodb://localhost:27017
+quarkus.mongodb.connection-string=mongodb://mongo_db:27017
+quarkus.mongodb.database= userDB
+#ovo ne go dodavaja na git
+quarkus.mongodb.hosts=*
