--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,20 @@
 version: '3.8'
 
 services:
-  user-service:
-    image: tanjag/user_service-jvm:1.0.0
-    ports:
-      - "9000:9000"
-    depends_on:
-      - mongo_db
-    environment:
-      MONGO_DB_URI_2: ${MONGO_DB_URI_2}
-      MONGO_DB_DATABASE_2: ${MONGO_DB_DATABASE_2}
-
   mongo_db:
     image: mongo:7.0.6
     ports:
       - "27017:27017"
     volumes:
       - mongo-data:/data/db
-
+  user-service:
+    image: tanjag/user_service-jvm:3.0.0
+    ports:
+      - "9000:9000"
+    depends_on:
+      - mongo_db
+    environment:
+      - QUARKUS_MONGODB_CONNECTION_STRING=mongodb://mongo_db:27017
+      - QUARKUS_MONGODB_DATABASE= userDB
 volumes:
   mongo-data:
