--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 quarkus.mongodb.connection-string=mongodb://mongo_db:27017
 quarkus.mongodb.database= userDB
 #ovo ne go dodavaja na git
-quarkus.mongodb.hosts=*
+#quarkus.mongodb.hosts=*
