--- a/.github/workflows/quarkus.yml
+++ b/.github/workflows/quarkus.yml
@@ -40,18 +40,23 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker image
         run: |
-          docker build \
-            -f src/main/docker/Dockerfile.jvm \
+          docker buildx build \
             --build-arg QUARKUS_MONGODB_CONNECTION_STRING=mongodb://${{ secrets.MONGO_DB_URI_2 }} \
             --build-arg QUARKUS_MONGODB_DATABASE=${{ secrets.MONGO_DB_DATABASE_2 }} \
+            -f src/main/docker/Dockerfile.jvm \
             -t $IMAGE_NAME:$TAG \
+            --output type=docker \
+            .
+
+      - name: Verify Docker image exists
+        run: docker images
 
       - name: Push Docker image to DockerHub
         run: docker push $IMAGE_NAME:$TAG
